<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:compat="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/item_1"
        android:enabled="true"
        android:icon="@android:color/transparent"
        android:title=""
        android:visible="true"
        compat:showAsAction="always"/>
    <item
        android:id="@+id/item_2"
        android:enabled="true"
        android:icon="@android:color/transparent"
        android:title=""
        android:visible="true"
        compat:showAsAction="always">
    </item>

</menu>